# test-bazel-angular

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  bazel-untitled  package-lock.json  package.json  tsconfig.json
src/: BUILD.bazel  defaults.bzl
src/lib/: BUILD.bazel  my.module.ts
src/lib/logging/: BUILD.bazel  console-polyfill.ts  console-polyfill.unit.spec.ts  logger.module.ts  logger.service.ts  logger.service.unit.spec.ts
src/lib/material/: BUILD.bazel  material.module.ts
src/lib/messages/: BUILD.bazel  messages.component.scss  messages.component.spec.ts  messages.component.ts  messages.component.unit.spec.ts  messages.module.ts
src/lib/messages/types/: BUILD.bazel  graphql-error.ts
