load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "material",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "@angular//packages/core",
        "@npm//tslib",
        "@angular_material//src/lib:material",
    ],
)
